# Forest-Mod-Menu-TEMP

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: native-lib.cpp
